Add state detection migration documentation and development notes
- Migration planning and completion reports
- SAM3 research and integration notes
- State detection setup and testing guides
- Training data system documentation
- API documentation for dataset annotation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -108,3 +108,11 @@ ci:
   autoupdate_schedule: weekly
   skip: []
   submodules: false
+
+  - repo: local
+    hooks:
+      - id: block-claude-attribution
+        name: Block Claude Attribution
+        entry: .pre-commit-hooks/block-claude-attribution.sh
+        language: script
+        stages: [commit-msg]
