--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 click = "^8.1.7"
 rich = "^13.7.0"
 networkx = "^3.2.1"
@@ -43,6 +43,7 @@ tabulate = "^0.9.0"
 colorama = "^0.4.6"
 pillow = "^10.2.0"
 aiohttp = "^3.9.1"
+qontinui = {path = "/mnt/c/qontinui/qontinui"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
@@ -70,12 +71,12 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 100
-target-version = ['py311']
+target-version = ['py312']
 include = '\.pyi?$'
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py312"
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -92,7 +93,7 @@ ignore = [
 ]
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
