--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ tabulate = "^0.9.0"
 colorama = "^0.4.6"
 pillow = "^10.2.0"
 aiohttp = "^3.9.1"
-qontinui = {path = "/mnt/c/qontinui/qontinui"}
+qontinui = {path = "../qontinui"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
