--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ astroid = "^3.0.2"
 radon = "^6.0.1"
 matplotlib = "^3.8.2"
 pydantic = "^2.5.3"
-structlog = "^24.1.0"
+structlog = "^25.4"
 psutil = "^5.9.8"
 py-spy = "^0.3.14"
 memray = {version = "^1.11.0", optional = true}
@@ -41,18 +41,20 @@ lxml = "^5.1.0"
 jinja2 = "^3.1.3"
 tabulate = "^0.9.0"
 colorama = "^0.4.6"
-pillow = "^10.2.0"
+pillow = "^11"
 aiohttp = "^3.9.1"
 qontinui = {path = "../qontinui"}
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.4"
-pytest-cov = "^4.1.0"
-pytest-asyncio = "^0.23.3"
+pytest = "^8.3"
+pytest-cov = "^6.0"
+pytest-asyncio = "^0.24"
 pytest-timeout = "^2.2.0"
-black = "^24.1.1"
-ruff = "^0.1.14"
-mypy = "^1.8.0"
+black = "^24.10"
+ruff = "^0.14"
+mypy = "^1.14"
+isort = "^7.0"
+pre-commit = "^4.4"
 types-psutil = "^5.9.5"
 types-tabulate = "^0.9.0"
 ipython = "^8.20.0"
