fix: configure mypy properly and resolve all type errors
- Add mypy_path and files settings to check source, tests, and examples
- Add yaml, requests, reportlab to ignored imports (missing stubs)
- Fix run.py to import JSONRunner from qontinui.json_executor
- Fix pre_commit_hooks.py to import from correct module path
- Fix test files with proper type assertions and ignores

mypy now passes with 0 errors across 288 source files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,8 @@ ignore = [
 
 [tool.mypy]
 python_version = "3.12"
+mypy_path = "python"
+files = ["python/qontinui_devtools", "python/tests", "python/examples"]
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
@@ -118,6 +120,9 @@ module = [
     "matplotlib.*",
     "networkx.*",
     "aiohttp.*",
+    "yaml.*",
+    "requests.*",
+    "reportlab.*",
 ]
 ignore_missing_imports = true
 
